fix footer alignment

--- a/personal/styles/styles.css
+++ b/personal/styles/styles.css
@@ -28,11 +28,11 @@
     padding: 25px 50px;
     margin-top: 200px;
     display: grid;
-    grid-template-columns: 1fr 500px 500px 500px 500px 1fr;
+    grid-template-columns: 1fr 500px 500px 250px 250px 1fr;
     grid-template-rows: 100px 50px 100px 100px;
 }
 .content {
-    max-width: 2000px;
+    max-width: 1600px;
     margin: 0 auto;
     padding-left: 25px;
     padding-right: 25px;
